finish myaccount.html

--- a/myaccount.html
+++ b/myaccount.html
@@ -207,9 +207,18 @@
   <!-- end header -->
 
   <div class="container">
+    <div class="row">
+      <div class="greetings">
+        <p class="greetings-title">Hello Jim Smith,</p>
+        <p class="greetings-desc">Blurb about account sits here</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
     <div class="row recent-orders">
-      <div class="brands-title brands-title-left">
-        <h2>Recent Orders</h2>
+      <div class="section section-title">
+        <h3>Recent Orders:</h3>
       </div>
       <div class="brands-row">
         <table class="data-table">
@@ -227,7 +236,7 @@
             <td class="no-break"><span>Jim Smith</span></td>
             <td>$2,138.58</td>
             <td>Processing</td>
-            <td class="view-order no-break"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap no-break"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123568247</td>
@@ -235,7 +244,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$695.25</td>
             <td>Shipped</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123456789</td>
@@ -243,11 +252,68 @@
             <td class="no-break">Jim Smith</td>
             <td>$49.56</td>
             <td>Delivered</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
         </table>
       </div>
+      <div class="section section-title">
+        <div class="btn-wrap">
+          <a href="" class=""><span>View All</span></a>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class="container">
+    <div class="row my-account">
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="section">
+          <h3>Contact Information:</h3>
+          <div class="content">
+            Jim Smith<br>jim.smith.test@email.com
+          </div>
+          <div class="btn-wrap">
+            <a href="" class=""><span>Edit</span></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="section">
+          <h3>Newsletter:</h3>
+          <div class="content">
+            Subscribed to newsletter
+          </div>
+          <div class="btn-wrap">
+            <a href="" class=""><span>Edit</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row my-account">
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="section">
+          <h3>Default Billing Address:</h3>
+          <div class="content">
+            Jim Smith<br>123 Streetname<br>Apt 1701<br>Anytown, Ontario<br>M2R 2G5
+          </div>
+          <div class="btn-wrap">
+            <a href="" class=""><span>Edit</span></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="section">
+          <h3>Default Shipping Address:</h3>
+          <div class="content">
+            Jim Smith<br>123 Streetname<br>Apt 1701<br>Anytown, Ontario<br>M2R 2G5
+          </div>
+          <div class="btn-wrap">
+            <a href="" class=""><span>Edit</span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="height:80px;"></div>
   </div>
 
   <!-- Footer -->
