--- a/myaccount_recent_order_list.html
+++ b/myaccount_recent_order_list.html
@@ -52,7 +52,6 @@
                 <div class="myaccount"><a title="My Account" href="login.html"><span class="hidden-xs">Français</span></a> </div>
                 <div class="myaccount"><a title="My Account" href="login.html"><span class="hidden-xs">Register</span></a> </div>
                 <div class="login"><a href="login.html"><span class="hidden-xs">Sign In</span></a> </div>
-                <!-- <div class="myaccount"><a title="My Account" href="login.html"><span class="hidden-xs">My Account</span></a> </div> -->
                 <div class="check"><a title="Checkout" href="checkout.html"><span class="hidden-xs">Checkout</span></a> </div>
               </div>
             </div>
@@ -227,7 +226,7 @@
             <td class="no-break"><span>Jim Smith</span></td>
             <td>$2,138.58</td>
             <td>Processing</td>
-            <td class="view-order no-break"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap no-break"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123568247</td>
@@ -235,7 +234,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$695.25</td>
             <td>Shipped</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123456789</td>
@@ -243,7 +242,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$49.56</td>
             <td>Delivered</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>125711692</td>
@@ -251,7 +250,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$2,138.58</td>
             <td>Processing</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123568247</td>
@@ -259,7 +258,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$695.25</td>
             <td>Shipped</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123456789</td>
@@ -267,7 +266,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$49.56</td>
             <td>Delivered</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>125711692</td>
@@ -275,7 +274,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$2,138.58</td>
             <td>Processing</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123568247</td>
@@ -283,7 +282,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$695.25</td>
             <td>Shipped</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123456789</td>
@@ -291,7 +290,7 @@
             <td class="no-break">Jim Smith</td>
             <td>$49.56</td>
             <td>Delivered</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
           <tr>
             <td>123456789</td>
@@ -299,10 +298,11 @@
             <td class="no-break">Jim Smith</td>
             <td>$49.56</td>
             <td>Delivered</td>
-            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+            <td class="btn-wrap"><a href="" class=""><span>View Order</span></a></td>
           </tr>
         </table>
       </div>
+      <div style="height: 70px;"></div>
     </div>
   </div>
 
