--- a/shop_tires_results_by_size_edit.html
+++ b/shop_tires_results_by_size_edit.html
@@ -455,7 +455,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="item col-lg-4 col-md-4 col-sm-4 col-xs-6">
+                <li class="item col-lg-4 col-md-4 col-sm-4 col-xs-6 no-border">
                   <div class="item-container">
                     <div class="item-inner">
                       <div class="item-img">
