--- a/cart.html
+++ b/cart.html
@@ -215,7 +215,7 @@
     <div class="container">
       <div class="row cart">
         <div class="col-sm-12 col-xs-12">
-          <article class="col-main cart-main">
+          <article class="col-main">
             <div class="cart cart-sub-main">
               <div class="table-responsive">
                 <form method="post" action="#updatePost/">
