--- a/shop_tires_results_by_size.html
+++ b/shop_tires_results_by_size.html
@@ -215,7 +215,7 @@
   <!-- end header -->
 
   <!-- Main Container -->
-  <section class="main-container col2-left-layout">
+  <section class="main-container">
     <div class="container">
       <div class="row">
         <div class="col-sm-9 col-sm-push-3">
