--- a/shop_product_detail_tire_specific_size.html
+++ b/shop_product_detail_tire_specific_size.html
@@ -245,7 +245,7 @@
                     <div class="product-name">
                       <h1>Latitude® X-Ice® Xi2™</h1>
                     </div>
-                    <div class="available-box hidden">
+                    <div class="available-box">
                       <p class="availability in-stock"><span>In Stock</span></p>
                     </div>
                     <div class="category-box">
@@ -256,15 +256,27 @@
                         <div class="">
                           <span>Tire Type:</span>Winter
                         </div>
-                        <div class="last">
+                        <div class="">
                           <span>Tire Class:</span>Studless
+                        </div>
+                        <div class="">
+                          <span>Size:</span>225/45/17
+                        </div>
+                        <div class="">
+                          <span>Load/Speed:</span>91 W
+                        </div>
+                        <div class="">
+                          <span>Side Wall:</span>Black
+                        </div>
+                        <div class="last">
+                          <span>Product #:</span>123456
                         </div>
                       </div>
                       <div class="col-lg-5 col-sm-5 col-xs-12 right">
-                        <div class="inner">
-                          <p>Starting At</p>
-                          <p class="price">$199.80<span class="each hidden">each</span></p>
-                          <div class="add-to-box hidden">
+                        <div class="inner middle">
+                          <p class="gray">MSRP: $349.95</p>
+                          <p class="price">$199.80<span class="each">each</span></p>
+                          <div class="add-to-box">
                             <div class="add-to-cart">
                               <div class="custom pull-left">
                                 <button onClick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 0 ) result.value--;return false;" class="reduced items-count" type="button"><i class="fa fa-minus">&nbsp;</i></button>
@@ -274,12 +286,12 @@
                             </div>
                           </div>
                           <div class="view-all-sizes">
-                            <a href=""><h3><i class="fas fa-ruler-horizontal"></i>&nbsp; VIEW ALL SIZES</h3></a>
+                            <a class="btn-add-to-cart" href=""><h3>Add to cart</h3></a>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="short-description">
+                    <div class="short-description hidden">
                       <p>Cold weather driving mastery for your SUV & crossover vehicle<br><br>A wide tread contact patch generates acceleration and braking power, as well as cornering traction, for outstanding winter manoeuvering. The special Flex Ice™ compound is formulated to maintain its flexibility under the most extreme cold weather conditions, including snow, slush, ice, wet and dry.</p>
                     </div>
                     <div class="assurance">
@@ -294,13 +306,13 @@
               <div class="product-collateral">
                 <div class="add_info">
                   <ul id="product-detail-tab" class="nav nav-tabs product-tabs">
-                    <li class="active"> <a href="#product_tabs_sizes" data-toggle="tab" aria-expanded="true">Sizes</a> </li>
-                    <li class=""><a href="#product_tabs_specification" data-toggle="tab" aria-expanded="false">Specifications</a></li>
+                    <li class=""> <a href="#product_tabs_sizes" data-toggle="tab" aria-expanded="false">Sizes</a> </li>
+                    <li class="active"><a href="#product_tabs_specification" data-toggle="tab" aria-expanded="true">Specifications</a></li>
                     <li class=""> <a href="#reviews_tabs" data-toggle="tab" aria-expanded="false">Product Description</a> </li>
                     <li class=""> <a href="#product_tabs_custom" data-toggle="tab" aria-expanded="false">Manufacturer Warranty</a> </li>
                   </ul>
                   <div id="productTabContent" class="tab-content">
-                    <div class="tab-pane fade active in table-responsive" id="product_tabs_sizes">
+                    <div class="tab-pane fade in table-responsive" id="product_tabs_sizes">
                       <table class="data-table">
                         <colgroup>
                           <col style="width:14%">
@@ -382,7 +394,7 @@
                         </tr>
                       </table>
                     </div>
-                    <div class="tab-pane fade" id="product_tabs_specification">
+                    <div class="tab-pane fade in active" id="product_tabs_specification">
                       <div>
                         <p>
                           Better traction in all winter conditions<br><br>
